--- a/index.html
+++ b/index.html
@@ -4,10 +4,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="estilos/style.css">
     <title>Projeto Redes Sociais</title>
 </head>
 <body>
-    <h1></h1>
+    <main>
+        <section id="telefone">
+            <iframe src="home.html" name="tela" id="tela" frameborder="0">
+                Seu navegador não é compatível com isso.
+            </iframe>
+
+        </section>
+        <section id="redes-sociais">
+            <a href="#" target="tela"> <img src="imagens/logo-home.jpg" alt="home"></a><br>
+            <a href="#" target="tela"> <img src="imagens/logo-youtube.jpg" alt="YouTube"></a><br>
+            <a href="#" target="tela"> <img src="imagens/logo-github.jpg" alt="GitHub"></a><br>
+            <a href="#" target="tela"> <img src="imagens/logo-instagram.jpg" alt="Instagram"></a><br>
+            <a href="#" target="tela"> <img src="imagens/logo-twitter.jpg" alt="Twitter"></a><br>
+            <a href="#" target="tela"> <img src="imagens/logo-facebook.jpg" alt="Facebook"></a>
+
+        </section>
+    </main>
     
 </body>
 </html>
